front-config.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  namespace: fibonacci
spec:
  selector:
    app: front
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: fibonacci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: golenski/fibonacci-front:1.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "0.5"
        ports:
        - containerPort: 8080
