manager-config.yml
apiVersion: v1
kind: Service
metadata:
  name: manager-svc
  namespace: fibonacci
spec:
  selector:
    app: manager
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: fibonacci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: golenski/fibonacci-task-manager:1.0
        resources:
          limits:
            memory: "700Mi"
        ports:
        - containerPort: 8080
