postgres-config.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: fibonacci
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
              claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:10.6
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
            # postgres needs sub-directory
            subPath: postgres
